[package]
name = "wifi-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wifi-rs = "0.2.2"
network-interface = "0.1.5"
clap = { version = "4.0.32", features = ["derive"] }
simple-error = "0.2.3"
nix = "0.26.1"

[profile.release]
opt-level = 3

[[bin]]
name = "wifi"
path = "src/main.rs"
